Fixed spacing between gametrackers when in collapsed state

--- a/styles/sass/_gametracker.scss
+++ b/styles/sass/_gametracker.scss
@@ -4,7 +4,7 @@
   display: inline-block;
   vertical-align: top;
   width: 250px + 24px;
-  margin: 0 12px;
+  margin: 16px 12px 0;
 
   a {
     &, &:link, &:visited {
